--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -6,27 +6,21 @@ TYPO3:
       groups:
         duttweiler-general:
           label: 'Duttweiler - Allgemein'
-          collapsed: FALSE
-          position: 50
+          position: start
         frontpage:
           label: 'Duttweiler - Startseite'
-          collapsed: FALSE
-          position: 51
+          position: start
         chronik:
           label: 'Duttweiler - Chronik'
-          collapsed: FALSE
-          position: 52
+          position: start
         api:
           label: 'Duttweiler - API'
-          collapsed: TRUE
           position: end
 
     userInterface:
       navigateComponent:
         nodeTree:
           loadingDepth: 2
-      backendLoginForm:
-        backgroundImage: 'resource://GSL.DuttweilerDe/Public/Images/LoginWallpaper.jpg'
 
     modules:
       duttweilerapp:
