--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -24,6 +24,8 @@ TYPO3:
       navigateComponent:
         nodeTree:
           loadingDepth: 2
+      backendLoginForm:
+        backgroundImage: 'resource://GSL.DuttweilerDe/Public/Images/LoginWallpaper.jpg'
 
     modules:
       duttweilerapp:
