enable cross site linking => set search startpoint for references to root

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -210,6 +210,8 @@
         reloadIfChanged: true
         inspector:
           group: related
+          editorOptions:
+            startingPoint: '/'
     date:
       type: DateTime
       ui:
@@ -785,6 +787,11 @@
                 label: 'Kasten'
 'TYPO3.Neos:Shortcut':
   properties:
+    target:
+      ui:
+        inspector:
+          editorOptions:
+            startingPoint: '/'
     date:
       type: DateTime
       ui:
