--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -834,7 +834,7 @@
               'frontpage':
                 label: 'Duttweiler.de Startseite'
               'weinbau':
-                label: 'duttweiler-wein.de'
+                label: 'Duttweiler Wein'
     subpageLayout:
       ui:
         inspector:
@@ -844,7 +844,7 @@
               'default':
                 label: 'Duttweiler.de Standard'
               'weinbau':
-                label: 'duttweiler-wein.de'
+                label: 'Duttweiler Wein'
 'TYPO3.Neos:Shortcut':
   properties:
     date:
