TASK: Apply migration Neos.Flow-20161124204700
Adjusts code to package renaming from "TYPO3.Flow" to "Neos.Flow"

--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -20,7 +20,7 @@ roles:
         permission: GRANT
 
 privilegeTargets:
-  '\TYPO3\Flow\Security\Authorization\Privilege\Method\MethodPrivilege':
+  '\Neos\Flow\Security\Authorization\Privilege\Method\MethodPrivilege':
     'GSL.DuttweilerDe:Backend.App':
       matcher: 'method(TYPO3\Neos\Controller\Module\ManagementController->indexAction())'
     'GSL.DuttweilerDe:Backend.App.Shoutout':
