--- a/Migrations/TYPO3CR/Version20160101200101.yaml
+++ b/Migrations/TYPO3CR/Version20160101200101.yaml
@@ -1,12 +1,12 @@
 up:
-  comments: 'Add layout property to TYPO3.Neos.NodeTypes:Headline'
+  comments: 'Add layout property to Neos.NodeTypes:Headline'
   migration:
     -
       filters:
         -
           type: 'NodeType'
           settings:
-            nodeType: 'TYPO3.Neos.NodeTypes:Headline'
+            nodeType: 'Neos.NodeTypes:Headline'
       transformations:
         -
           type: 'AddNewProperty'
