--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -1,8 +1,8 @@
 roles:
-  TYPO3.Neos:AbstractEditor:
+  Neos.Neos:AbstractEditor:
     privileges:
       -
-        privilegeTarget: 'TYPO3.Neos:Backend.Module.Media.ManageAssetCollections'
+        privilegeTarget: 'Neos.Neos:Backend.Module.Media.ManageAssetCollections'
         permission: GRANT
       -
         privilegeTarget: 'Neos.Media:ManageAssetCollections'
@@ -13,7 +13,7 @@ roles:
       -
         privilegeTarget: 'GSL.DuttweilerDe:Backend.App.Shoutout'
         permission: GRANT
-  TYPO3.Neos:LivePublisher:
+  Neos.Neos:LivePublisher:
     privileges:
       -
         privilegeTarget: 'GSL.DuttweilerDe:Backend.App.ReviewNotifications'
@@ -22,7 +22,7 @@ roles:
 privilegeTargets:
   '\Neos\Flow\Security\Authorization\Privilege\Method\MethodPrivilege':
     'GSL.DuttweilerDe:Backend.App':
-      matcher: 'method(TYPO3\Neos\Controller\Module\ManagementController->indexAction())'
+      matcher: 'method(Neos\Neos\Controller\Module\ManagementController->indexAction())'
     'GSL.DuttweilerDe:Backend.App.Shoutout':
       matcher: 'method(GSL\DuttweilerDe\Controller\Module\DuttweilerApp\DigitalShoutoutController->(index|send)Action())'
     'GSL.DuttweilerDe:Backend.App.ReviewNotifications':
