--- a/Migrations/TYPO3CR/Version20160401151501.yaml
+++ b/Migrations/TYPO3CR/Version20160401151501.yaml
@@ -1,12 +1,12 @@
 up:
-  comments: 'Add date property to TYPO3.Neos:Shortcut'
+  comments: 'Add date property to Neos.Neos:Shortcut'
   migration:
     -
       filters:
         -
           type: 'NodeType'
           settings:
-            nodeType: 'TYPO3.Neos:Shortcut'
+            nodeType: 'Neos.Neos:Shortcut'
       transformations:
         -
           type: 'AddNewProperty'
