TASK: Include package routes via Settings.yaml

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -2,6 +2,10 @@
 
 Neos:
   Flow:
+    mvc:
+      routes:
+        'GSL.DuttweilerDe':
+          position: 'before Neos.Neos'
     i18n:
       defaultLocale: de
     error:
