--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -21,6 +21,10 @@
           label: 'Header Hintergrundbilder'
           position: 40
   childNodes:
+    main:
+      constraints:
+        nodeTypes:
+          'GSL.DuttweilerDe.Content:FrontpageNewsList': true
     rightcolumn:
       type: 'Neos.Neos:ContentCollection'
       constraints:
@@ -377,7 +381,7 @@
   ui:
     label: 'News Liste'
     icon: icon-list
-    group: 'hidden'
+    group: 'frontpage'
 'GSL.DuttweilerDe.Content:FrontpageNewsItem':
   superTypes:
     'Neos.Neos:Content': true
@@ -862,6 +866,7 @@
 'Neos.Neos:ContentCollection':
   constraints:
     nodeTypes:
+      'GSL.DuttweilerDe.Content:FrontpageNewsList': FALSE
       'GSL.DuttweilerDe.Content:FrontpageInfoBox': FALSE
       'GSL.DuttweilerDe.Content:FrontpageNewsItem': FALSE
       'GSL.DuttweilerDe.Content:PressespiegelItem': FALSE
