--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "type": "neos-site",
     "description": "Neos Site Package for duttweiler.de (c) www.jan-sl.de",
     "require": {
-        "neos/neos": "~3.0.0"
+        "neos/neos": "~3.0.0",
+        "neos/nodetypes": "~3.0.0",
+        "neos/seo": "*"
     },
     "authors": [
       {
