--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -233,6 +233,8 @@
           format:
             '*': FALSE
             removeFormat: TRUE
+    openGraphType:
+      defaultValue: 'article'
 
 'GSL.DuttweilerDe.Content:PressespiegelItem':
   superTypes:
@@ -871,6 +873,8 @@
       'GSL.DuttweilerDe.Content:FrontpageNewsItem': FALSE
       'GSL.DuttweilerDe.Content:PressespiegelItem': FALSE
 'Neos.Neos:Document':
+  superTypes:
+    'Neos.Seo:TwitterCardMixin': FALSE
   constraints:
     nodeTypes:
       'Neos.NodeTypes:Page': FALSE
@@ -878,3 +882,9 @@
       'GSL.DuttweilerDe.Pages:ChronikRoot': TRUE
       'GSL.DuttweilerDe.Pages:ChronikBranch': FALSE
       'GSL.DuttweilerDe.Pages:ChronikItem': FALSE
+'Neos.Seo:OpenGraphMixin':
+  ui:
+    inspector:
+      groups:
+        openGraph:
+          label: 'OpenGraph (Facebook)'
